CHANGES IN VERSION 1.6.15
-------------------------
BUG FIX
    o Fixed error due to multiple header lines from TCGA MAF files. Issue: #162
    o APOBEC enrichment estimation, context fix. Issue: #160
ENHANCEMENTS:
    o Added argument bgCol and borderCol to oncoplots for better background representation. Issue: #164

CHANGES IN VERSION 1.6.10
-------------------------
BUG FIX
    o APOBEC enrichment estimation, denominator fix. Issue: #160
    o Total sample estimation bug fix. Issue: #159
    o fix plot error caused by NAs in signatureEnrichment. PR: #158

CHANGES IN VERSION 1.6.07
-------------------------
BUG FIX
    o Correct ordering of mutsigCV q-values in oncoplot. Issue: #144
    o Bioconductor windows error fix

CHANGES IN VERSION 1.6.05
-------------------------
BUG FIX
    o Fix breaks due to changes in data.table 1.11.0. Issue: #143
    o SomaticInteraction bug fix due to hclust. Issue: #142

CHANGES IN VERSION 1.6.00
-------------------------
NEW FUNCTIONS
    o clinicalEnrichment - Performs mutational enrichment analysis for a given clinical feature.
    o signatureEnrichment - Performs sample stratification based on signature exposures and enrichment analysis.
    o plotEnrichmentResults - Plots results from clinicalEnrichment and signatureEnrichment analysis
    o lollipopPlot2 - Compare two lollipop plots

SIGNIFICANT USER-LEVEL IMPROVEMENT
    o Forstplot now includes summary table within the plot.
    o Included capture_size argument in tcgaCompare.
    o annovarToMaf can take multiple annovar annotation files and converts them to a single MAF cohort.