@@ -13,7 +13,7 @@ oncoplot(maf, top = 20, genes = NULL, mutsig = NULL, mutsigQval = 0.1,
   sampleOrder = NULL, writeMatrix = FALSE, fontSize = 10,
   SampleNamefontSize = 10, titleFontSize = 15, legendFontSize = 12,
   annotationFontSize = 12, annotationTitleFontSize = 12,
-  bgCol = "#CCCCCC", borderCol = NA)
+  bgCol = "#CCCCCC", borderCol = NA, colbar_pathway = FALSE)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
@@ -75,6 +75,8 @@ for ComplexHeatmap \link[ComplexHeatmap]{oncoPrint} function if you wish to cust
 \item{bgCol}{Background grid color for wild-type (not-mutated) samples. Default gray - "#CCCCCC"}
 
 \item{borderCol}{border grid color for wild-type (not-mutated) samples. Default NA.}
+
+\item{colbar_pathway}{Draw top column bar with respect to diplayed pathway. Default FALSE}
 }
 \value{
 None.
