@@ -1,9 +1,12 @@
 CHANGES IN VERSION 1.6.15
 -------------------------
 BUG FIX
+    o somaticInteractions data.table fix. Issue: #166
     o Fixed error due to multiple header lines from TCGA MAF files. Issue: #162
     o APOBEC enrichment estimation, context fix. Issue: #160
 ENHANCEMENTS:
+    o Added argument colbar_pathway to oncoplot for controlling mutation burden display. Issue: #167
+    o Fixed showBarcodes in plotmafSummary. Summary plot now includes annotations (% or raw number) on the barplot. Issue: #165
     o Added argument bgCol and borderCol to oncoplots for better background representation. Issue: #164
 
 CHANGES IN VERSION 1.6.10
